<resources>
    <string name="app_name">TexChange</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="texchange">TexChange</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string-array name="Items">
        <item>The Tragedy of Hamlet, Prince of Denmark</item>
        <item>King Lear</item>
        <item>Julius Caesar</item>
    </string-array>
    <string-array name="Info">
        <item>Now cracks a noble heart. Good-night, sweet prince; And flights of angels sing thee to thy rest.</item>
        <item>As flies to wanton boys, are we to the gods; they kill us for their sport.</item>
        <item>There is a tide in the affairs of men, which taken at the flood, leads on to fortune. Omitted, all the voyage of their life is bound in shallows and in miseries.</item>
    </string-array>
    <string name="noItemSelected">Please select a Title.</string>
</resources>