<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_in_background"
    android:gravity="center"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/register"
            android:textAlignment="center"
            android:elevation="20dp"
            android:textSize="60sp"/>
        <EditText
            android:id="@+id/RegisterEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:padding="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner"
            />
        <EditText
            android:id="@+id/RegisterEmailConfirmInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:hint="@string/confirm_email"
            android:padding="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner"
            />
        <EditText
            android:id="@+id/RegisterPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:padding="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner"
            />
        <EditText
            android:id="@+id/RegisterConfirmPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:padding="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner"
            />
        <Button
            android:layout_width="match_parent"
            android:id="@+id/RegisterButton"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/white"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            />

    </LinearLayout>
</RelativeLayout>